--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "@expo/browser-polyfill": "^0.0.0-alpha.4",
-    "phaser-ce": "^2.9.4"
+    "phaser-ce": "github:thunkable/phaser-ce#00a18f3931b3d08181d1bcb3e8ec8aec8f94da97"
   },
   "directories": {
     "example": "examples",
